--- a/static/scss/_navbar.scss
+++ b/static/scss/_navbar.scss
@@ -1,12 +1,13 @@
 .navbar-custom {
   padding-top: 1rem;
   padding-bottom: 1rem;
-  background-color: fade-out($black, 0.3);
+  background-color: fade-out(#050, 0.3);
   .navbar-brand {
     text-transform: uppercase;
-    font-size: 1rem;
+    font-size: 2.5rem;
     letter-spacing: 0.1rem;
     font-weight: 700;
+    color: #ff1d2a;
   }
   .navbar-nav {
     .nav-item {
