--- a/templates/index.html
+++ b/templates/index.html
@@ -27,27 +27,20 @@
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Start Bootstrap</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Sign Up</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Log In</a>
-          </li>
-        </ul>
-      </div>
+        <div class="navbar-brand h1">Дикая птица</div>
+      <a class="navbar-text" href="{% url "main:index" %}">Главная</a>
+      <a class="navbar-text" href="{% url "main:strizhi" %}">Стрижи</a>
+      <a class="navbar-text" href="#">Определитель птиц</a>
+      <a class="navbar-text" href="{% url "main:contancts" %}">Контакты</a>
     </div>
   </nav>
 
   <header class="masthead text-center text-white">
     <div class="masthead-content">
       <div class="container">
+          {% block header %}
         <h2 class="masthead-subheading mb-0">Птички</h2>
+          {% endblock %}
       </div>
     </div>
     <div class="bg-circle-1 bg-circle"></div>
@@ -67,8 +60,30 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">For those about to rock...</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Домик</h2>
+              <p>Не используйте клетки для попугайчиков или хомячков, перо
+может зацепиться за узкую решетку и сильнее повредить сломаное
+крыло, или вывихнуть здоровое, пти может повредить глаза или
+клюв, крупные, если поместятся, могут перевернуть клетку и
+попасть к коту или на улицу. кроме того в ней светло, а это
+провоцирует стресс, у ЧМТ очень сильно ухудшает общее
+состояние. коробка из-под обуви с кучей дырок, как ни странно,
+подходит гораздо больше: нет света, ничего не видно, уютно и
+безопасно! при переломе, после обработки и фиксации, у пти
+не должно быть возможности двигаться, чтобы кость сросталась
+и не повреждала мягкие ткани, чтобы не получалось склевывать
+повязку. при черепно-мозговой травме света и звуков не должно
+быть вообще, как у инсультного больного, полный покой, только
+там где еда должно быть немного света. вобщем мы имитируем
+палату псих-больного, только маленькую, и беспокоим пти
+исключительно по делу, когда даем лекарства, 2 раза в сутки.
+если под рукой террариум или аквариум, можно туда, но должен
+быть воздух обязательно! если птичку жалко - переноска-корзина
+для кошек идеально подойдет, но ее надо накрыть от света.
+  не ставте пти в тепло сразу после мороза! зимой дикая пти
+обязательно должна жить при +5 - +10 градусах! исключения
+только для окончательно и бесповоротно нелетных, но и им резко
+менять температуру нельзя. при минусе оставлять тоже нельзя.</p>
           </div>
         </div>
       </div>
@@ -85,8 +100,24 @@
         </div>
         <div class="col-lg-6">
           <div class="p-5">
-            <h2 class="display-4">We salute you!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Правило 15и минут</h2>
+              <p>Это не относится к птенцам! тех необходимо кормить раз в
+2 часа, как любых других младенцев. <br>
+В большинстве случаев необхдимо уделять пти внимание 2 раза
+в сутки, чтобы дать лекарства, обработать раны, если они есть,
+дать воды и еды. в целом вы посвещаете ей от 7и до 15и минут
+за раз! все остальное время коробка предоставлена сама себе,
+трогать ее не нужно, если шумит - проявите солидарность,
+выпускать гулять опасно, тем более показывать других птичек
+в окошке или знакомить с ваими друзьями. уважайте личное
+пространство пти. вы, в свою очередь, идете на работу,
+занимаетесь семьей, делаете свои человеческие дела. а
+пти восстанавливается, спит, пребывает в равновесии с миром.
+для вертячных голубей и чмт необходим строгий режим темноты и
+тишины. им может требоваться насильное кормление, хотябы 4 раза
+в день, но достаточно будет разбить на 2 раза утро и вечер:
+как только встали; перед выходом из дома; как только пришли;
+перед сном. это тоже быстро и легко))</p>
           </div>
         </div>
       </div>
@@ -102,8 +133,67 @@
         </div>
         <div class="col-lg-6 order-lg-1">
           <div class="p-5">
-            <h2 class="display-4">Let there be rock!</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod aliquid, mollitia odio veniam sit iste esse assumenda amet aperiam exercitationem, ea animi blanditiis recusandae! Ratione voluptatum molestiae adipisci, beatae obcaecati.</p>
+            <h2 class="display-4">Осмотр</h2>
+            <p> теперь самое страшное - лечение. берем себя в руки, собираемся
+с силами и оперативно проводим осмотр пти. прощупайте все кости,
+загляните в клюв, прощупайте киль, переберите перья.
+
+внимательно! с боем, если
+нужно, за вас это врядли кто-то сделает. чем быстрее закончите,
+тем лучше, ненадо возиться, вы не причините вреда болшье, чем
+не найденая вовремя дробинка или осколок кости, которые не
+заметите. клюв не оторвется, кости, как у курицы, крепкие, шею
+свернуть тоже не так просто, парочка покровных перьев выпала - не
+беда, маховые и хвостовые берегите. все сюрпризы обнаружили?
+верните пти в коробку, отдыхать, и готовте лекарства. молодцы!</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+      <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="static/img/01.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">Инвентарь</h2>
+              <p>вам нужно кухонное полотенчико, инсулиновый приц со сьемной
+иглой, пара шприцов на 10кубов и пара на 5кубов для дачи всех
+лекарств и воды. для совсем мелкой пти возмите еще систему для
+капельницы. для обработки ран нужны левомеколь, перекись,
+хлоргексидин, бинт, бумажный пластырь. вам можно корвалол.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+          <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-lg-6 order-lg-2">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="static/img/01.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-lg-6 order-lg-1">
+          <div class="p-5">
+            <h2 class="display-4">Фиксация</h2>
+              <p>прижимаете крылья к телу в естественном положении и туго, плотно
+обматываете полотенчиком или тряпкой. садитесь, держите кулечек
+между колен, обе руки свободны. при ранении нужно замотать всю
+пти кроме поврежденного места, обязательно закрыв голову. меньше
+видит - тише лежит. буйную ворону возможно придется связать бинтом,
+обе лапы распрямить к хвосту и на узел, клюв заклеить пластырем и
+плотно прижать полотенчиком голову. хища накройте чем по тяжелее,
+он вцепится в ткань и замрет. вобще истерику можно переждать,
+просто проявите терпение и упрямство.</p>
           </div>
         </div>
       </div>
