--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -6,8 +6,6 @@
 
 {% block header %}
 <h2 class="masthead-heading mb-0">Контакты</h2>
-    <h3 class="masthead-subheading mb-0">Обратите внимание на
-    <a href="{% url 'main:index' %}">Черный список!</a> </h3>
 {% endblock %}
 
 {% block content %}
@@ -16,11 +14,9 @@
       <div class="row align-items-center">
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
-            <h1>Для подобравших:</h1>
+            <h1>ПТИЦАМИ ДОЛЖНЫ ЗАНИМАТЬСЯ ПРОФЕССИОНАЛЫ?</h1>
               <p class="h3">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.
-​</p>
+Вы должны понимать, что волонтеры не обязаны принимать от населения всех и любых животных и птиц. Функционирующих государственных «приютов» в России не существует, любая эффективная и гуманная помощь животным осуществляется обычными людьми в условиях своей квартиры, семьи, на личные денежные средства. Есть птичьи реабилитационные центры, основанные также частными лицами, но имеющие право работать с редкими видами и лечат они только со специалистами орнитологами, услуги которых так же платные, как и все анализы, лекарства и корм для подопечных. Эти центры существуют так же за счет их организаторов  на пожертвования, а не на средства государства. Принимают они определенные виды птиц, ниже описано кто на ком специализируется, однако массовыми видами, конкретно ГОЛУБИ, СЕРЫЕ ВОРОНЫ, ГРАЧИ, СТРИЖИ, ЧАЙКИ - не принимаются никем из РЦ. </p>
           </div>
         </div>
       </div>
@@ -32,11 +28,8 @@ Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, tur
       <div class="row align-items-center">
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
-            <h1>Для ветеринаров:</h1>
               <p class="h3">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.
-​</p>
+Это происходит из-за переполнения таких центров. Если перечисленные птицы остаются нелетными, пристроить их для РЦ очень тяжело. Они занимают много пространства и отнимают средства на питание и уход, причем это место всегда необходимо новым птицам в тяжелом состоянии, зачастую редких видов или летным птицам, которых можно вернуть в природу после реабилитации. Серая ворона, к примеру, в неволе живет около 10-15 лет, занимает в 3 раза больше места, чем синица, дрозд или иволга, значит за то время, пока она сидит там, могли бы быть спасены от 100 до 150 других видов птиц. Кроме того условий для постоянного содержания птиц в этих центрах нет, если она остается там ее качество жизни будет низким. ​</p>
           </div>
         </div>
       </div>
@@ -48,11 +41,11 @@ Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, tur
       <div class="row align-items-center">
         <div class="col-lg-12 order-lg-1">
           <div class="p-5">
-            <h1>Для волонтеров:</h1>
               <p class="h3">
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-Curabitur pretium tincidunt lacus. Nulla gravida orci a odio. Nullam varius, turpis et commodo pharetra, est eros bibendum elit, nec luctus magna felis sollicitudin mauris. Integer in mauris eu nibh euismod gravida. Duis ac tellus et risus vulputate vehicula. Donec lobortis risus a elit. Etiam tempor. Ut ullamcorper, ligula eu tempor congue, eros est euismod turpis, id tincidunt sapien risus a quam. Maecenas fermentum consequat mi. Donec fermentum. Pellentesque malesuada nulla a mi. Duis sapien sem, aliquet nec, commodo eget, consequat quis, neque. Aliquam faucibus, elit ut dictum aliquet, felis nisl adipiscing sapien, sed malesuada diam lacus eget erat. Cras mollis scelerisque nunc. Nullam arcu. Aliquam consequat. Curabitur augue lorem, dapibus quis, laoreet et, pretium ac, nisi. Aenean magna nisl, mollis quis, molestie eu, feugiat in, orci. In hac habitasse platea dictumst.
-​</p>
+И гораздо больше в стране волонтеров, занимающихся как раз массовыми видами птиц по парочке человек на крупный город. Процент нелетности среди городских массовых высокий, через какое-то время дома у благодетеля оказывается больше инвалидов, чем квадратных метров, часто кроме птиц у них также живут спасенные кошки и собаки. Нет, такой человек не откажет вам в том, чтобы принять к себе 5ого голубя или 3ю ворону, нет, такие люди не выкинут птицу на улицу и постараются вылечить ее. И жаловаться вам волонтер не будет, сохраняя собственное достоинство. Но через какое-то время такой человек уже откажется принимать новых подопечных, потому, что это несет опасность для уже живущих там зверей и средств всегда не хватает. </p>
+
+              <p class="h3">Пожалуйста, постарайтесь гуманно и с ответственностью относиться не только к животным, но и к тем, кто посвятил их спасению свою жизнь. В течении лета очень много людей подбирают птиц, волонтеры не справляются с этим потоком, не хватает денег, сил, места, но в первую очередь рук! Если вы оставите птицу, которую сами нашли, у себя, хотяб на время лечения, это уже будет большой помощь им!
+              </p>
           </div>
         </div>
       </div>
