--- a/templates/index.html
+++ b/templates/index.html
@@ -130,6 +130,8 @@
   <!-- Footer -->
   <footer class="py-5 bg-black">
     <div class="container">
+        <p style="color:white"><i>Сайт в стадии разработки!!! Мы будем добавлять новую информацию и оптимизировать его для удобства поиска нужных инструкций и добавим максимум видеоиллюстраций. Чтобы в будущем каждому было максимально понятно и просто им пользоваться оставляйте <a href="mailto:xeniakarkarkar@gmail.com">здесь</a> свои пожелания и предложения!</i></p>
+
       <p class="m-0 text-center text-white small">Copyright &copy; Your Website 2019</p>
     </div>
     <!-- /.container -->
