--- a/static/scss/_masthead.scss
+++ b/static/scss/_masthead.scss
@@ -14,7 +14,7 @@ header.masthead {
     .masthead-heading {
       font-size: 4rem;
       text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
-      color: #b95ec7;
+      color: #9643bf;
     }
     .masthead-subheading {
       font-size: 2rem;
