--- a/templates/opredelitel.html
+++ b/templates/opredelitel.html
@@ -1,25 +1,32 @@
 {% extends 'index.html' %}
 {% block title %}
-    Черный список
+    Определитель птиц
 {% endblock %}
 
 {% block content %}
+    <style>
+    img {
+        object-fit: cover;
+        height: 400px;
+        width: 400px
+    }
+    </style>
     <section>
         <div class="container">
             <p class="h2">Птенцы</p><br>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                        <img class="img-fluid" src="static/pigeons_corvids/5-74-588x480.jpg" alt="">
+                        <img class="" src="static/pigeons_corvids/5-74-588x480.jpg" alt="">
                         <br>
                         <span class="h3">Птенец 1</span>
             </div>
             <div class="col-lg-4 order-lg-2">
-                    <img class="img-fluid" src="static/pigeons_corvids/1425901069_1144809375.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/1425901069_1144809375.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 2</span>
             </div>
             <div class="col-lg-4 order-lg-2">
-                    <img class="img-fluid" src="static/pigeons_corvids/baby_1.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/baby_1.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 3</span>
             </div>
@@ -27,116 +34,116 @@
 
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/pigeons_corvids/baby2.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/baby2.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 4</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/pigeons_corvids/1669942635__viber_2019-06-04_19-58-00.jpg.61d8772d70d32cdcbe3d3144d6a4572f.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/1669942635__viber_2019-06-04_19-58-00.jpg.61d8772d70d32cdcbe3d3144d6a4572f.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 5</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/pigeons_corvids/1553150720165871927.png" alt="">
+                    <img class="" src="static/pigeons_corvids/1553150720165871927.png" alt="">
                     <br>
                     <span class="h3">Птенец 6</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/pigeons_corvids/ad640534-fc4f-4de1-85b6-135b7846d3af.jpg.4da8083b7850821371d76467285518b2.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/ad640534-fc4f-4de1-85b6-135b7846d3af.jpg.4da8083b7850821371d76467285518b2.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 7</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/pigeons_corvids/13060151.jpg" alt="">
+                    <img class="" src="static/pigeons_corvids/13060151.jpg" alt="">
                     <br>
                     <span class="h3">Птенец 8</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/image.jpeg.ec40c9b05312f111171cfd93e9bd8de0.jpeg" alt="">
+                    <img class="" src="static/image.jpeg.ec40c9b05312f111171cfd93e9bd8de0.jpeg" alt="">
                     <br>
                     <span class="h3">Птенец 9</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/index.jfif" alt="">
+                    <img class="" src="static/index.jfif" alt="">
                     <br>
-                    <span class="h3">Птенец 7</span>
+                    <span class="h3">Птенец 10</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/singing_swimming/s600.webp" alt="">
+                    <img class="" src="static/singing_swimming/s600.webp" alt="">
                     <br>
-                    <span class="h3">Птенец 8</span>
+                    <span class="h3">Птенец 11</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/singing_swimming/iOuApugEMwI.jpg" alt="">
+                    <img class="" src="static/singing_swimming/iOuApugEMwI.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 9</span>
+                    <span class="h3">Птенец 12</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/singing_swimming/P6090310.jpg" alt="">
+                    <img class="" src="static/singing_swimming/P6090310.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 7</span>
+                    <span class="h3">Птенец 13</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/232859.jpg" alt="">
+                    <img class="" src="static/carnivores/232859.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 8</span>
+                    <span class="h3">Птенец 14</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/5845332.jpg" alt="">
+                    <img class="" src="static/carnivores/5845332.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 9</span>
+                    <span class="h3">Птенец 15</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/80893014_70d27faa433a.jpg" alt="">
+                    <img class="" src="static/carnivores/80893014_70d27faa433a.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 7</span>
+                    <span class="h3">Птенец 16</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/1562987662183440891.jpg" alt="">
+                    <img class="" src="static/carnivores/1562987662183440891.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 8</span>
+                    <span class="h3">Птенец 17</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/image.jpg" alt="">
+                    <img class="" src="static/carnivores/image.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 9</span>
+                    <span class="h3">Птенец 18</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/inx960x640.jpg" alt="">
+                    <img class="" src="static/carnivores/inx960x640.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 7</span>
+                    <span class="h3">Птенец 19</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/Mdd00Q0wTD9jiyUS6hVlxf5x445zKkim.jpg" alt="">
+                    <img class="" src="static/carnivores/Mdd00Q0wTD9jiyUS6hVlxf5x445zKkim.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 8</span>
+                    <span class="h3">Птенец 20</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/oka_oka_pomozhem sovam prod10.jpg" alt="">
+                    <img class="" src="static/carnivores/oka_oka_pomozhem sovam prod10.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 9</span>
+                    <span class="h3">Птенец 21</span>
             </div>
             </div>
             <div class="row align-items-center">
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/ptenec_2.jpg" alt="">
+                    <img class="" src="static/carnivores/ptenec_2.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 7</span>
+                    <span class="h3">Птенец 22</span>
             </div>
             <div class="col-lg-4 order-lg-1">
-                    <img class="img-fluid" src="static/carnivores/yastreb-perepelyatnik-foto-i-opisanie_3.jpg" alt="">
+                    <img class="" src="static/carnivores/yastreb-perepelyatnik-foto-i-opisanie_3.jpg" alt="">
                     <br>
-                    <span class="h3">Птенец 8</span>
+                    <span class="h3">Птенец 23</span>
             </div>
             </div>
         </div>
@@ -148,7 +155,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 order-lg-2">
                     <div class="p-5">
-                        <img class="img-fluid rounded-circle" src="static/img/02.jpg" alt="">
+                        <img class=" rounded-circle" src="static/pigeons_corvids/Orsopapera-colombo_002.JPG" alt="">
                     </div>
                 </div>
                 <div class="col-lg-6 order-lg-1">
