--- a/templates/strizhi.html
+++ b/templates/strizhi.html
@@ -17,9 +17,9 @@
       <div class="row align-items-center">
         <div class="col-lg-4 order-lg-2">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="static/img/01.jpg" alt="">
-            <img class="img-fluid rounded-circle" src="static/img/02.jpg" alt="">
-            <img class="img-fluid rounded-circle" src="static/img/03.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="static/5kR0wGDUuy4.jpg" alt="">
+            <img class="img-fluid rounded-circle" src="static/image.jpeg.ec40c9b05312f111171cfd93e9bd8de0.jpeg" alt="">
+            <img class="img-fluid rounded-circle" src="static/IMG_1568.jpg" alt="">
           </div>
         </div>
         <div class="col-lg-8 order-lg-1">
@@ -50,7 +50,7 @@
             <h1>Чем кормить?</h1>
               <p class="h3">ПОДХОДЯТ: мраморный и
 туркменский таракан, банановый
-и  сверчек, муравьиные яица,
+и  сверчок, муравьиные яица,
 мадагаскарский таракан без
 панциря.
 и не более 3-4 штучек в день  зофобаса
