--- a/static/css/one-page-wonder.css
+++ b/static/css/one-page-wonder.css
@@ -48,6 +48,11 @@ h6 {
   color: #420f25;
 }
 
+.navbar-custom .navbar-text {
+  color: #420f25;
+  font-size: 1.5rem;
+}
+
 .navbar-custom .navbar-nav .nav-item .nav-link {
   text-transform: uppercase;
   font-size: 0.8rem;
@@ -75,7 +80,7 @@ header.masthead .masthead-content {
 header.masthead .masthead-content .masthead-heading {
   font-size: 4rem;
   text-shadow: -3px -3px 0 #000, 3px -3px 0 #000, -3px 3px 0 #000, 3px 3px 0 #000;
-  color: #b95ec7;
+  color: #9643bf;
 }
 
 header.masthead .masthead-content .masthead-subheading {
