--- a/static/scss/_navbar.scss
+++ b/static/scss/_navbar.scss
@@ -9,6 +9,10 @@
     font-weight: 700;
     color: #420f25;
   }
+  .navbar-text {
+        color: #420f25;
+        font-size: 1.5rem;
+  }
   .navbar-nav {
     .nav-item {
       .nav-link {
